# Inferra

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-MIT  README.md  SECURITY.md  compose.yaml  inferra.toml  mkdocs.yml  perf_report.json  pyproject.toml  tailwind.config.cjs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: docker-entrypoint.sh
deploy/examples/: inferra.container.production.toml  inferra.container.toml
deploy/linux/: fpm-package.sh
deploy/macos/: com.inferra.agent.plist  install.sh  uninstall.sh
deploy/systemd/: inferra.service
deploy/windows/: InferraInstall.psm1  InferraWindows.psm1  build-exe.ps1  build-rust-exe.ps1  inferra.spec  pyi_entry.py  (+4 more)
deprecated/: README.md
docs/: README.md  implementation_roadmap.md  index.md
schemas/: inferra_observed_signal_v1.json
scripts/: build-all.ps1  build-ui.sh  build-web.ps1  build-web.sh  capture-readme-hero.py  dev-web.ps1  install-inferra.ps1  stop-inferra-dev.ps1  uninstall-inferra.ps1  version.py
site/: 404.html  index.html  search.html
src/: Cargo.toml  __init__.py  app.py  cli.py  cli_display.py  windows_service.py
src/ai/: __init__.py  explainer.py  investigation.py  ollama.py  prompts.py  redaction.py  registry.py  service.py
src/analysis/: __init__.py  anomaly.py  correlation.py  models.py  simple.py
src/cli_core/commands/: __init__.py  ai.py  ai_provider.py  collectors.py  config.py  dashboard.py  demo.py  guide.py  incidents.py  reasoning.py  service.py  setup.py  storage.py  workspace.py
src/collectors/: __init__.py  app_http.py  base.py  docker.py  factory.py  file.py  host_metrics.py  journald.py  kubernetes.py  linux_syslog.py  process_snapshot.py  supervisor.py  windows_eventlog.py  windows_service.py
src/config/: __init__.py  defaults.toml  loader.py  model.py  models.py  presets.py
src/core/: __init__.py  enums.py  ids.py  logging.py  models.py  time.py
src/crates/inferra-api/: Cargo.toml
src/crates/inferra-api/src/: export_sink.rs  lib.rs  middleware.rs
src/crates/inferra-cli/: Cargo.toml
src/crates/inferra-cli/src/: cli.rs  context.rs  main.rs  runtime_supervisor.rs  ui.rs
src/crates/inferra-cli/src/commands/: ai.rs  data.rs  mod.rs  system.rs
src/crates/inferra-cli/tests/: root_command.rs
src/crates/inferra-collectors/: Cargo.toml
src/crates/inferra-collectors/src/: collector_unit_tests.rs  lib.rs  otlp_logs.rs
src/crates/inferra-config/: Cargo.toml
src/crates/inferra-config/src/: lib.rs
src/crates/inferra-contracts/: Cargo.toml
src/crates/inferra-contracts/src/: lib.rs
src/crates/inferra-core/: Cargo.toml
src/crates/inferra-core/src/: lib.rs  resource_snapshot.rs  unit_tests.rs
src/crates/inferra-storage/: Cargo.toml
src/crates/inferra-storage/src/: lib.rs
src/crates/inferra-windows-service/: Cargo.toml
src/crates/inferra-windows-service/src/: lib.rs
src/events/: __init__.py  models.py  serialization.py
src/explanation/: __init__.py  template.py
src/normalization/: __init__.py  dedup.py  fingerprint.py  noise.py  pipeline.py
src/normalization/parsers/: __init__.py  base.py  json_line.py  k8s_event.py  syslog_rfc5424.py
src/reasoning/: __init__.py  composer.py  contradiction.py  engine.py  inference_graph.py  simple.py  validation.py
src/reasoning/signals/: types.py
src/runtime/: __init__.py  context.py  service_graph.py  workspace_map.py  workspace_scan.py
src/storage/: __init__.py  calibration_store.py  metric_ringbuffer.py  migrations.py  service_graph.py  sqlite.py
src/web/: __init__.py  _shared.py  api.py  frontend_assets.py  http_security.py  live_hub.py  rate_limit.py
src/web/frontend/: components.json  index.html  package-lock.json  package.json  readme-hero.html  tsconfig.json  tsconfig.node.json  vite.config.ts
src/web/frontend/src/: App.tsx  api.ts  index.css  main.tsx
src/web/frontend/src/components/feedback/: states.tsx
src/web/frontend/src/components/inferra/: application-charts.tsx  charts.tsx  correlation-graph.tsx  graph-node-detail.tsx  health.tsx  incident.tsx  noise-controls.tsx  responsive-chart-frame.tsx  runtime-console.tsx  systems-runtime-inventory.tsx  timeline.tsx  trace-summary.tsx  unmapped-services-panel.tsx
src/web/frontend/src/components/investigation/: investigation-view.tsx
src/web/frontend/src/components/layout/: app-shell.tsx  console-patterns.tsx  page-header.tsx
src/web/frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  json-inspector.tsx  skeleton.tsx  table.tsx  textarea.tsx
src/web/frontend/src/dev/: ReadmeHeroShowcase.tsx  overview-showcase-mock.ts  readme-hero-main.tsx  readme-hero.css
src/web/frontend/src/lib/: collectors.ts  experience.ts  format.ts  graph-layout-storage.ts  inferra-runtime.ts  observability.ts  query.ts  systems-inventory.ts  theme.ts
src/web/frontend/src/pages/: AiInvestigatorPage.tsx  ControlPage.tsx  EvidencePage.tsx  GraphPage.tsx  IncidentsPage.tsx  LearningReviewPage.tsx  OverviewPage.tsx  SettingsPage.tsx  SystemsPage.tsx  TracePage.tsx  WorkspacePage.tsx
src/web/routers/: __init__.py  ai.py  collectors.py  events.py  incidents.py  investigate.py  services.py  topology.py  workspace.py
src/web/routes/: system.py
src/web/static/: app.js  index.html  styles.css  tailwind.css
src/web/static/js/: api.js  chart-canvas.js  drawer.js  main.js  state.js  theme.js  utils.js  ws-client.js
src/web/static/js/views/: ai.js  collectors.js  dashboard.js  incidents.js  logs.js  services.js  settings.js
src/web/ui_dist/: index.html
src/web/ui_dist/assets/: charts-B58TuQOA.js  charts-DAHnfYaQ.js  graph-B0rYcu5V.js  graph-o2oyUiUH.js  index-BBUrOSGp.css  index-BMMS6Kk4.js  index-BmG4A7uT.css  index-BvJFsAQq.js  index-CBPsedPs.css  index-Ce_k3cyT.css  index-Crwp_OnN.js  index-D-uS_hFM.js  index-DMH7aW5f.js  index-DPVJxrdg.css  index-DXa2a84r.css  index-DZ_2wucY.js  index-DqEoSeca.js  index-DxUQLT5k.css  index-vXx2Zxjk.js  query-DnjJzF-T.js  query-DusYIeB7.js  vendor-C1IgZJlF.js  vendor-FbAuHnai.js
tests/: conftest.py
(+299 files in other folders)
