[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferra"
version = "0.3.0"
description = """Local-first AI-integrated runtime intelligence control plane.

The shipping runtime is the Rust workspace at src/Cargo.toml. This Python project
packages developer tooling, docs, and integration harnesses only."""
readme = "README.md"
requires-python = ">=3.11"
keywords = ["observability", "debugging", "incident-response", "ollama", "sqlite"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "aioresponses>=0.7",
  "pytest-cov>=6",
  "ruff>=0.11",
]
ui = ["playwright>=1.41"]
docs = ["mkdocs>=1.6"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that need optional deps or longer runtime",
    "legacy_archive: deprecated Python archive tests retained for regression/reference only",
    "legacy_runtime: deprecated Python FastAPI/runtime integration tests",
    "perf: performance budgets; run explicitly or in CI perf job",
    "windows: Windows-specific paths or collectors",
    "linux: Linux-specific collectors or paths",
    "determinism: long-run determinism checks",
    "chaos: resilience and failure-injection scenarios",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
]

[tool.ruff]
line-length = 120
target-version = "py311"
