[package]
name = "inferra-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
axum = { workspace = true }
base64 = "0.22"
bytes = { workspace = true }
http = "1"
inferra-config = { path = "../inferra-config" }
inferra-collectors = { path = "../inferra-collectors" }
inferra-contracts = { path = "../inferra-contracts" }
inferra-core = { path = "../inferra-core" }
inferra-storage = { path = "../inferra-storage" }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "logs"] }
prost = "0.14.3"
rusqlite = { workspace = true }
