[package]
name = "inferra-collectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
inferra-core = { path = "../inferra-core" }
inferra-storage = { path = "../inferra-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
