[package]
name = "inferra-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
inferra-config = { path = "../inferra-config" }
inferra-contracts = { path = "../inferra-contracts" }
inferra-storage = { path = "../inferra-storage" }
reqwest = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
bytes = "1"
http = "1"
